[package]
name = "xproto"
version = "1.1.4"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Rust bindings to the X11 protocol library"
repository = "https://github.com/dylanmckay/xproto-rs"
license = "MIT"
documentation = "https://docs.rs/xproto"
keywords = ["X11", "protocol", "xorg", "server", "forwarding"]

[features]
default = ["protocol-support"]

protocol-support = ["protocol", "protocol-derive"]

[dependencies]
protocol = { version = "1.0", optional = true }
protocol-derive = { version = "1.0", optional = true }

