[package]
name = "xproto"
version = "1.1.5"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Rust bindings to the X11 protocol library"
repository = "https://github.com/dylanmckay/xproto"
license = "MIT"
documentation = "https://docs.rs/xproto"
keywords = ["X11", "protocol", "xorg", "server", "forwarding"]

[features]
default = ["protocol-support"]

protocol-support = ["protocol", "protocol-derive"]

[dependencies]
protocol = { version = "3.1", optional = true }
protocol-derive = { version = "3.1", optional = true }

